add_subdirectory(simple_graph_model)

add_subdirectory(vertical_layout)

add_subdirectory(calculator)

add_subdirectory(text)

add_subdirectory(resizable_images)

add_subdirectory(styles)

add_subdirectory(connection_colors)

add_subdirectory(dynamic_ports)

add_subdirectory(lock_nodes_and_connections)

add_subdirectory(calculator_qml)

add_subdirectory(acquisition_viewer)

add_subdirectory(compute_viewer)
